--- a/ModelGraph/ModelGraph/MainPage.xaml
+++ b/ModelGraph/ModelGraph/MainPage.xaml
@@ -5,9 +5,55 @@
     xmlns:local="using:ModelGraph"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    d:DesignHeight="100"
+    d:DesignWidth="200">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Page.Resources>
 
+        <Style x:Key="TitleStyle" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="Margin" Value="12,4,0,0" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+        </Style>
+
+        <Style x:Key="PanelStyle" TargetType="StackPanel">
+            <Setter Property="Orientation" Value="Horizontal" />
+            <Setter Property="HorizontalAlignment" Value="Right" />
+        </Style>
+
+        <Style x:Key="ButtonStyle" TargetType="Button">
+            <Setter Property="IsTabStop" Value="False" />
+            <Setter Property="Padding" Value="2,2,2,2" />
+            <Setter Property="Margin" Value="5,0,5,0" />
+            <Setter Property="Visibility" Value="Collapsed" />
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="Foreground" Value="{ThemeResource ApplicationForegroundThemeBrush}" />
+        </Style>
+
+    </Page.Resources>
+
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="30" />
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0" x:Name="TabGrid" >
+            <Rectangle x:Name="GrapPanel" Fill="Transparent"  HorizontalAlignment="Stretch"/>
+            <local:ModelTabControl x:Name="TabPanel" HorizontalAlignment="Left" />
+        </Grid>
+        <Grid Grid.Row="1" x:Name="ButtonGrid" Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}" AllowDrop="True" DragOver="ButtonGrid_DragOver" Drop="ButtonGrid_Drop">
+            <TextBlock x:Name="ModelTitle" Style="{StaticResource TitleStyle}" />
+            <StackPanel x:Name="ButtonPanel" Style="{StaticResource PanelStyle}">
+                <Button x:Name="Button1" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
+                <Button x:Name="Button2" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
+                <Button x:Name="Button3" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
+                <Button x:Name="Button4" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Row="2" x:Name="ControlGrid" />
     </Grid>
+
 </Page>
