--- a/ModelGraph/ModelGraph/Views/ModelPage.xaml
+++ b/ModelGraph/ModelGraph/Views/ModelPage.xaml
@@ -6,24 +6,45 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Style="{StaticResource PageStyle}"
     mc:Ignorable="d">
+    <Page.Resources>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Style x:Key="TitleStyle" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="Margin" Value="12,4,0,0" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+        </Style>
+
+        <Style x:Key="PanelStyle" TargetType="StackPanel">
+            <Setter Property="Orientation" Value="Horizontal" />
+            <Setter Property="HorizontalAlignment" Value="Right" />
+        </Style>
+
+        <Style x:Key="ButtonStyle" TargetType="Button">
+            <Setter Property="IsTabStop" Value="False" />
+            <Setter Property="Padding" Value="2,2,2,2" />
+            <Setter Property="Margin" Value="5,0,5,0" />
+            <Setter Property="Visibility" Value="Collapsed" />
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="Foreground" Value="{ThemeResource ApplicationForegroundThemeBrush}" />
+        </Style>
+
+    </Page.Resources>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" >
         <Grid.RowDefinitions>
-            <RowDefinition Height="32"/>
+            <RowDefinition Height="30" />
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="30*"/>
-            <ColumnDefinition Width="70*"/>
-        </Grid.ColumnDefinitions>
 
-        <Button Content="Button" Click="Button_Click"/>
-
-        <Grid Name="LeftGrid" Grid.Column="0" Background="Pink" Grid.Row="1">
-            <TextBlock Text="X" HorizontalAlignment="Right" VerticalAlignment="Top"/>
+        <Grid Grid.Row="0" x:Name="ButtonGrid" Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
+            <TextBlock x:Name="ModelTitle" Style="{StaticResource TitleStyle}" />
+            <StackPanel x:Name="ButtonPanel" Style="{StaticResource PanelStyle}">
+                <Button x:Name="Button1" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
+                <Button x:Name="Button2" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
+                <Button x:Name="Button3" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
+                <Button x:Name="Button4" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
+            </StackPanel>
         </Grid>
-        <Grid Name="RightGrid" Grid.Column="1" Background="CornflowerBlue" Grid.Row="1"/>
-
+        <Grid Grid.Row="1" x:Name="ControlGrid" />
     </Grid>
 </Page>
 
