--- a/ModelGraph/ModelGraph/Controls/PageControl/PageControl.xaml
+++ b/ModelGraph/ModelGraph/Controls/PageControl/PageControl.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="ModelGraph.Views.ModelPage"
+    x:Class="ModelGraph.PageControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -29,7 +29,9 @@
         </Style>
 
     </Page.Resources>
+    
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" >
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
             <RowDefinition Height="*"/>
@@ -44,6 +46,7 @@
                 <Button x:Name="Button4" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
             </StackPanel>
         </Grid>
+        
         <Grid Grid.Row="1" x:Name="ControlGrid" />
     </Grid>
 </Page>
