--- a/ModelGraph/ModelGraphUWP/Views/ShellNavigationPage.xaml
+++ b/ModelGraph/ModelGraphUWP/Views/ShellNavigationPage.xaml
@@ -7,7 +7,6 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid>
         <NavigationView x:Name="NavView"
                     OpenPaneLength="280" 
                     CompactModeThresholdWidth="560" 
@@ -15,6 +14,7 @@
                     ItemInvoked="NavView_ItemInvoked"
                     SelectionChanged="NavView_SelectionChanged"
                     Loaded="NavView_Loaded"
+                    AlwaysShowHeader="False"
                     Canvas.ZIndex="0">
 
             <NavigationView.MenuItems>
@@ -24,21 +24,21 @@
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
                 <NavigationViewItemSeparator/>
-                <NavigationViewItemHeader Content="Main pages"/>
+                <NavigationViewItemHeader Content="Models"/>
                 <NavigationViewItem x:Uid="AppsNavItem" Icon="AllApps" Content="Apps" Tag="apps"/>
                 <NavigationViewItem x:Uid="GamesNavItem" Icon="Video" Content="Games" Tag="games"/>
                 <NavigationViewItem x:Uid="MusicNavItem" Icon="Audio" Content="Music" Tag="music"/>
             </NavigationView.MenuItems>
 
-            <NavigationView.HeaderTemplate>
+            <!--<NavigationView.HeaderTemplate>
                 <DataTemplate>
-                    <Grid Margin="24,10,0,0">
+                    <Grid Margin="0,0,0,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Style="{StaticResource TitleTextBlockStyle}"
-                           FontSize="28"
+                           FontSize="16"
                            VerticalAlignment="Center"
                            Text="Welcome"/>
                         <CommandBar Grid.Column="1"
@@ -46,12 +46,12 @@
                             VerticalAlignment="Center"
                             DefaultLabelPosition="Right"
                             Background="{ThemeResource SystemControlBackgroundAltHighBrush}">
-                            <AppBarButton Label="Refresh" Icon="Refresh"/>
-                            <AppBarButton Label="Import" Icon="Import"/>
+                            <AppBarButton Label="CompactWindow" Icon="Refresh" Click="AppBarButton_Click"/>
+                            <AppBarButton Label="DefaultWindow" Icon="Import" Click="AppBarButton_Click_1" />
                         </CommandBar>
                     </Grid>
                 </DataTemplate>
-            </NavigationView.HeaderTemplate>
+            </NavigationView.HeaderTemplate>-->
 
             <!--<NavigationView.PaneFooter>
             <HyperlinkButton x:Name="MoreInfoBtn"
@@ -60,7 +60,7 @@
                              Margin="12,0"/>
         </NavigationView.PaneFooter>-->
 
-            <Frame x:Name="ContentFrame" Margin="24">
+            <Frame x:Name="ContentFrame" Margin="0,0,0,0">
                 <Frame.ContentTransitions>
                     <TransitionCollection>
                         <NavigationThemeTransition/>
@@ -69,7 +69,4 @@
             </Frame>
 
         </NavigationView>
-
-        <TextBlock x:Name="AppTitle" Style="{StaticResource CaptionTextBlockStyle}" Text="ModelGraph" IsHitTestVisible="False" Canvas.ZIndex="1"/>
-    </Grid>
 </Page>
