--- a/ModelGraph/ModelGraphUWP/Views/NavigationPage.xaml
+++ b/ModelGraph/ModelGraphUWP/Views/NavigationPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="ModelGraphUWP.Views.ShellNavigationPage"
+    x:Class="ModelGraphUWP.Views.NavigationPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ModelGraphUWP.Views"
