--- a/ModelGraph/ModelGraphUWP/Views/NavigationPage.xaml
+++ b/ModelGraph/ModelGraphUWP/Views/NavigationPage.xaml
@@ -8,6 +8,7 @@
     mc:Ignorable="d">
 
     <NavigationView x:Name="NavView"
+                    IsTabStop="False"
                     OpenPaneLength="200" 
                     CompactModeThresholdWidth="300" 
                     ExpandedModeThresholdWidth="600"
