--- a/ModelGraph/ModelGraph/Views/HomePage.xaml
+++ b/ModelGraph/ModelGraph/Views/HomePage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="ModelGraph.Views.MainPage"
+    x:Class="ModelGraph.Views.HomePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,8 +11,10 @@
         Margin="{StaticResource MediumLeftRightMargin}">
         <Grid
             Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}">
-            <!--The SystemControlPageBackgroundChromeLowBrush background represents where you should place your content. 
-                Place your content here.-->
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Top">
+                <Button Content="New" Click="NewButton_Click"></Button>
+            </StackPanel>
+
         </Grid>
     </Grid>
 </Page>
