--- a/ModelGraph/ModelGraph/Views/ShellPage.xaml
+++ b/ModelGraph/ModelGraph/Views/ShellPage.xaml
@@ -14,15 +14,22 @@
         Header="{x:Bind Selected.Content, Mode=OneWay}"
         ItemInvoked="OnItemInvoked"
         IsSettingsVisible="True"
+        AlwaysShowHeader="False"
+
         Background="{ThemeResource SystemControlBackgroundAltHighBrush}">
         <NavigationView.MenuItems>
-            <!--
-            TODO WTS: Change the symbols for each item as appropriate for your app
-            More on Segoe UI Symbol icons: https://docs.microsoft.com/windows/uwp/style/segoe-ui-symbol-font
-            Or to use an IconElement instead of a Symbol see https://github.com/Microsoft/WindowsTemplateStudio/blob/master/docs/projectTypes/navigationpane.md
-            Edit String/en-US/Resources.resw: Add a menu item title for each page
-            -->
-            <NavigationViewItem x:Uid="Shell_Main" Icon="Document" helpers:NavHelper.NavigateTo="views:MainPage" />
+            <NavigationViewItem x:Name="Home" x:Uid="HomeNav" helpers:NavHelper.NavigateTo="views:HomePage">
+                <NavigationViewItem.Icon>
+                    <FontIcon Glyph="&#xE80F;"/>
+                </NavigationViewItem.Icon>
+            </NavigationViewItem>
+            <NavigationViewItemSeparator/>
+            <NavigationViewItemSeparator x:Name="AddModelPageHere"/>
+            <NavigationViewItem x:Name="Compare" x:Uid="CompareNav" helpers:NavHelper.NavigateTo="views:ComparePage">
+                <NavigationViewItem.Icon>
+                    <FontIcon Glyph="&#xE773;"/>
+                </NavigationViewItem.Icon>
+            </NavigationViewItem>
         </NavigationView.MenuItems>
         <NavigationView.HeaderTemplate>
             <DataTemplate>
