--- a/ModelGraph/ModelGraph/Views/MainPage.xaml
+++ b/ModelGraph/ModelGraph/Views/MainPage.xaml
@@ -21,7 +21,7 @@
         <Grid
             Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}">
             <StackPanel>
-                <TextBlock x:Name="AppDescription" x:Uid="_AppDescription" />
+                <TextBlock x:Name="AppDescription" x:Uid="_AppDescription" Visibility="Collapsed"/>
                 <StackPanel Margin="5">
                     <Button Name ="New" Style="{StaticResource ButtonStyle}" x:Uid="_CreateNewModel" Click="NewButton_Click"></Button>
                     <Button Name ="Open" Style="{StaticResource ButtonStyle}" x:Uid="_OpenModelFile" Click="OpenButton_Click"></Button>
