--- a/ModelGraph/ModelGraph/Controls/ModelPage/ModelPageControl.xaml
+++ b/ModelGraph/ModelGraph/Controls/ModelPage/ModelPageControl.xaml
@@ -14,9 +14,14 @@
             <Setter Property="VerticalAlignment" Value="Center" />
         </Style>
 
-        <Style x:Key="PanelStyle" TargetType="StackPanel">
+        <Style x:Key="PagePanelStyle" TargetType="StackPanel">
             <Setter Property="Orientation" Value="Horizontal" />
             <Setter Property="HorizontalAlignment" Value="Right" />
+        </Style>
+
+        <Style x:Key="ControlPanelStyle" TargetType="StackPanel">
+            <Setter Property="Orientation" Value="Horizontal" />
+            <Setter Property="Margin" Value="4,0,0,0" />
         </Style>
 
         <Style x:Key="ButtonStyle" TargetType="Button">
@@ -39,11 +44,11 @@
 
         <Grid Grid.Row="0" x:Name="ButtonGrid" Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}">
             <TextBlock x:Name="ModelTitle" Style="{StaticResource TitleStyle}"/>
-            <StackPanel x:Name="ButtonPanel" Style="{StaticResource PanelStyle}">
+            <StackPanel x:Name="PageButtonPanel" Style="{StaticResource PagePanelStyle}">
                 <Button x:Name="Button1" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
                 <Button x:Name="Button2" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
                 <Button x:Name="Button3" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
-                <Button x:Name="Button4" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
+                <StackPanel x:Name="ControlPanel" Style="{StaticResource ControlPanelStyle}"/>
             </StackPanel>
         </Grid>
         
