--- a/ModelGraph/ModelGraph/Controls/ModelGraph/ModelGraphControl.xaml
+++ b/ModelGraph/ModelGraph/Controls/ModelGraph/ModelGraphControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="ModelGraph.Controls.ModelGraphControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -10,8 +10,65 @@
     d:DesignWidth="200"
     Unloaded="ModelGraphControl_Unloaded" >
 
-    <UserControl.Resources>
+    <Page.Resources>
+        
+        <Style x:Key="ControlPanelStyle" TargetType="StackPanel">
+            <Setter Property="Orientation" Value="Horizontal" />
+            <Setter Property="HorizontalAlignment" Value="Right" />
+        </Style>
 
+        <Style x:Key="ActionPanelStyle" TargetType="StackPanel">
+            <Setter Property="Orientation" Value="Horizontal" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+        </Style>
+
+        <Style x:Key="ActionNameStyle" TargetType="TextBlock" >
+            <Setter Property="Margin" Value="2,0,0,0" />
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="TextAlignment" Value="Left"/>
+            <Setter Property="FontSize" Value="14" />
+            <Setter Property="FontStyle" Value="Italic" />
+            <Setter Property="FontWeight" Value="SemiBold" />
+            <Setter Property="Foreground" Value="Firebrick"/>
+        </Style>
+
+        <Style x:Key="PinButtonStyle" TargetType="Button">
+            <Setter Property="Margin" Value="2,0,10,0" />
+            <Setter Property="FontSize" Value="10" />
+            <Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
+            <Setter Property="Content" Value="&#xe718;" />
+            <Setter Property="Background" Value="{ThemeResource SystemControlPageBackgroundChromeLowBrush}" />
+        </Style>
+
+        <Style x:Key="FlipButtonStyle" TargetType="Button">
+            <Setter Property="Margin" Value="2,0,0,0" />
+            <Setter Property="FontSize" Value="12" />
+            <Setter Property="Content" Value="F" />
+            <Setter Property="Background" Value="{ThemeResource SystemControlPageBackgroundChromeLowBrush}" />
+        </Style>
+
+        <Style x:Key="UndoButtonStyle" TargetType="Button">
+            <Setter Property="Margin" Value="10,0,0,0" />
+            <Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
+            <Setter Property="FontSize" Value="11" />
+            <Setter Property="Content" Value="&#xe7a6;" />
+            <Setter Property="Background" Value="{ThemeResource SystemControlPageBackgroundChromeLowBrush}" />
+        </Style>
+
+        <Style x:Key="RedoButtonStyle" TargetType="Button">
+            <Setter Property="Margin" Value="2,0,0,0" />
+            <Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
+            <Setter Property="FontSize" Value="11" />
+            <Setter Property="Content" Value="&#xe7a7;" />
+            <Setter Property="Background" Value="{ThemeResource SystemControlPageBackgroundChromeLowBrush}" />
+        </Style>
+
+        <Style x:Key="UndoRedoCountStyle" TargetType="TextBlock">
+            <Setter Property="Margin" Value="2,0,2,0" />
+            <Setter Property="TextAlignment" Value="Left" />
+            <Setter Property="VerticalAlignment" Value="Bottom" />
+            <Setter Property="FontSize" Value="8" />
+        </Style>
 
         <Style x:Key="ToolTipBorderStyle" TargetType="Border">
             <Setter Property="CornerRadius" Value="4" />
@@ -28,19 +85,54 @@
             <Setter Property="Background" Value="DarkSlateGray" />
         </Style>
         
-    </UserControl.Resources>
+    </Page.Resources>
 
-    <Grid x:Name="RootGrid" Background="DarkSlateGray" >
+    <Grid x:Name="RootGrid" Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}" >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30" />
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        
+        <Grid Grid.Row="0" x:Name="ControlGrid" >
 
-        <canvas:CanvasControl x:Name="DrawCanvas" Draw="DrawCanvas_Draw" IsTabStop="False" CreateResources="DrawCanvas_CreateResources" />
+            <StackPanel x:Name="ControlPanel" Style="{StaticResource ControlPanelStyle}">
+                
+                <TextBlock x:Name="ActionName" Style="{StaticResource ActionNameStyle}" x:Uid="_gcpName"/>
+                <Button x:Name="PinButton" x:Uid="_gcpPin" Style="{StaticResource PinButtonStyle}" Click="PinButton_Click"/>
 
-        <Canvas x:Name="RootCanvas" Background="Transparent" DoubleTapped="RootCanvas_DoubleTapped">
-            <Button x:Name="RootButton" Width="4" Height="4" PreviewKeyDown="RootButton_KeyDown" KeyUp="RootButton_KeyUp"/>
-            <Border x:Name="ToolTipBorder" Style="{StaticResource ToolTipBorderStyle}" IsTapEnabled="False">
-                <TextBlock x:Name="ItemToolTip" Style="{StaticResource ToolTipStyle}" IsTapEnabled="False"/>
-            </Border>
-        </Canvas>
+                <Button x:Name="FlipButton" x:Uid="_gcpFlipButton" Style="{StaticResource FlipButtonStyle}">
+                    <Button.Flyout>
+                        <MenuFlyout>
+                            <MenuFlyoutItem x:Name="FlipVertical" x:Uid="941X" Click="FlipVertical_Click"/>
+                            <MenuFlyoutItem x:Name="FlipHorizontal" x:Uid="942X" Click="FlipHorizontal_Click"/>
+                            <MenuFlyoutItem x:Name="FlipBothWays" x:Uid="943X" Click="FlipBothWays_Click"/>
+                            <MenuFlyoutItem x:Name="RotateClockwise" x:Uid="944X" Click="RotateClockwise_Click"/>
+                            <MenuFlyoutItem x:Name="RotateFlipVertical" x:Uid="945X" Click="RotateFlipVertical_Click"/>
+                            <MenuFlyoutItem x:Name="RotateFlipHorizontal" x:Uid="946X" Click="RotateFlipHorizontal_Click"/>
+                            <MenuFlyoutItem x:Name="RotateFlipBothWays" x:Uid="947X" Click="RotateFlipBothWays_Click"/>
+                        </MenuFlyout>
+                    </Button.Flyout>
+                </Button>
 
+                <Button x:Name="UndoButton" x:Uid="_gcpUndoButton" Style="{StaticResource UndoButtonStyle}" Click="UndoButton_Click"/>
+                <TextBlock x:Name="UndoCount" x:Uid="_gcpUndoCount" Style="{StaticResource UndoRedoCountStyle}" />
+                <Button x:Name="RedoButton" x:Uid="_gcpRedoButton" Style="{StaticResource RedoButtonStyle}"  Click="RedoButton_Click"/>
+                <TextBlock x:Name="RedoCount" x:Uid="_gcpRedoCount" Style="{StaticResource UndoRedoCountStyle}" />
+
+            </StackPanel>
+        </Grid>
+
+        <Grid x:Name="CanvasGrid"  Grid.Row="1" Background="DarkSlateGray">
+
+            <canvas:CanvasControl x:Name="DrawCanvas" Draw="DrawCanvas_Draw" IsTabStop="False" CreateResources="DrawCanvas_CreateResources" />
+
+            <Canvas x:Name="RootCanvas" Background="Transparent" DoubleTapped="RootCanvas_DoubleTapped">
+                <Button x:Name="RootButton" Width="4" Height="4" PreviewKeyDown="RootButton_KeyDown" KeyUp="RootButton_KeyUp"/>
+                <Border x:Name="ToolTipBorder" Style="{StaticResource ToolTipBorderStyle}" IsTapEnabled="False">
+                    <TextBlock x:Name="ItemToolTip" Style="{StaticResource ToolTipStyle}" IsTapEnabled="False"/>
+                </Border>
+            </Canvas>
+        </Grid>
     </Grid>
 
-</UserControl>
+</Page>
