--- a/ModelGraph/ModelGraph/Controls/ModelTree/ModelTreeControl.xaml
+++ b/ModelGraph/ModelGraph/Controls/ModelTree/ModelTreeControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="ModelGraph.Controls.ModelTreeControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,7 +8,33 @@
     d:DesignHeight="320"
     d:DesignWidth="320">
 
-    <UserControl.Resources>
+    <Page.Resources>
+
+        <Style x:Key="TitleStyle" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="Margin" Value="12,4,0,0" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+        </Style>
+
+        <Style x:Key="PagePanelStyle" TargetType="StackPanel">
+            <Setter Property="Orientation" Value="Horizontal" />
+            <Setter Property="HorizontalAlignment" Value="Right" />
+        </Style>
+
+        <Style x:Key="ControlPanelStyle" TargetType="StackPanel">
+            <Setter Property="Orientation" Value="Horizontal" />
+            <Setter Property="Margin" Value="4,0,0,0" />
+        </Style>
+
+        <Style x:Key="ButtonStyle" TargetType="Button">
+            <Setter Property="IsTabStop" Value="False" />
+            <Setter Property="Padding" Value="2,2,2,2" />
+            <Setter Property="Margin" Value="5,0,5,0" />
+            <Setter Property="Visibility" Value="Collapsed" />
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="Foreground" Value="{ThemeResource ApplicationForegroundThemeBrush}" />
+        </Style>
+
 
         <x:Double x:Key="LevelIndent">20</x:Double>
         <x:Double x:Key="ElementHieght">24</x:Double>
@@ -562,37 +588,57 @@
             <Setter Property="HorizontalAlignment" Value="Left" />
         </Style>
 
-    </UserControl.Resources>
+    </Page.Resources>
 
-    <Canvas x:Name="TreeCanvas" Style="{StaticResource TreeCanvasStyle}" Loaded="TreeCanvas_Loaded" PointerPressed="TreeGrid_PointerPressed" PointerWheelChanged="TreeCanvas_PointerWheelChanged">
-        <Grid x:Name="SelectionGrid" Width="{Binding ElementName=TreeCanvas, Path=ActualWidth}" Height="{StaticResource ElementHieght}" Background="#CCFFF29D" >
-            <Button x:Name="KeyButton" Background="#CCFFF29D" Width="2" Height="20" KeyDown="KeyButton_KeyDown" KeyUp="KeyButton_KeyUp" LostFocus="KeyButton_LostFocus" HorizontalAlignment="Left"/>
-            <StackPanel x:Name="ButtonStack" Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button x:Name="HelpButton" x:Uid="HelpButton" Style="{StaticResource HelpButtonStyle}" >
-                    <Button.Flyout>
-                        <Flyout>
-                            <RichTextBlock x:Name="ItemHelp" MaxWidth="320" Margin="0" Padding="0"/>
-                        </Flyout>
-                    </Button.Flyout>
-                </Button>
-                <Button x:Name="ItemButton1" Style="{StaticResource ItemButtonStyle}"  Click="ItemButton_Click" />
-                <Button x:Name="ItemButton2" Style="{StaticResource ItemButtonStyle}"  Click="ItemButton_Click" />
-                <Button x:Name="ItemButton3" Style="{StaticResource ItemButtonStyle}"  Click="ItemButton_Click" />
-                <Button x:Name="MenuButton"  x:Uid="MenuButton"  Style="{StaticResource ItemButtonStyle}" >
-                    <Button.Flyout>
-                        <MenuFlyout Opening="MenuFlyout_Opening">
-                            <MenuFlyoutItem x:Name="MenuItem1" Click="MenuItem_Click" />
-                            <MenuFlyoutItem x:Name="MenuItem2" Click="MenuItem_Click" />
-                            <MenuFlyoutItem x:Name="MenuItem3" Click="MenuItem_Click" />
-                            <MenuFlyoutItem x:Name="MenuItem4" Click="MenuItem_Click" />
-                            <MenuFlyoutItem x:Name="MenuItem5" Click="MenuItem_Click" />
-                            <MenuFlyoutItem x:Name="MenuItem6" Click="MenuItem_Click" />
-                        </MenuFlyout>
-                    </Button.Flyout>
-                    <FontIcon  FontFamily="Segoe UI" Glyph="&#x22EF;" FontSize="20" />
-                </Button>
-                <!--<Button x:Name="TailButton" Width="2" Margin="10,0,0,0"  Height="{StaticResource ElementHieght}" KeyDown="TailButton_KeyDown" KeyUp="TailButton_KeyUp" LostFocus="TailButton_LostFocus"/>-->
+    <Grid Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}" >
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30" />
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0" x:Name="ButtonGrid" >
+            <TextBlock x:Name="ModelTitle" Style="{StaticResource TitleStyle}"/>
+            <StackPanel x:Name="ControlPanel" Style="{StaticResource PagePanelStyle}">
+                <Button x:Name="Button1" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
+                <Button x:Name="Button2" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
+                <Button x:Name="Button3" Style="{StaticResource ButtonStyle}" Click="AppButton_Click"/>
             </StackPanel>
         </Grid>
-    </Canvas>
-</UserControl>
+
+        <Grid Grid.Row="1" x:Name="ControlGrid" >
+            <Canvas x:Name="TreeCanvas" Style="{StaticResource TreeCanvasStyle}" Loaded="TreeCanvas_Loaded" PointerPressed="TreeGrid_PointerPressed" PointerWheelChanged="TreeCanvas_PointerWheelChanged">
+                <Grid x:Name="SelectionGrid" Width="{Binding ElementName=TreeCanvas, Path=ActualWidth}" Height="{StaticResource ElementHieght}" Background="#CCFFF29D" >
+                    <Button x:Name="KeyButton" Background="#CCFFF29D" Width="2" Height="20" KeyDown="KeyButton_KeyDown" KeyUp="KeyButton_KeyUp" LostFocus="KeyButton_LostFocus" HorizontalAlignment="Left"/>
+                    <StackPanel x:Name="ButtonStack" Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Button x:Name="HelpButton" x:Uid="HelpButton" Style="{StaticResource HelpButtonStyle}" >
+                            <Button.Flyout>
+                                <Flyout>
+                                    <RichTextBlock x:Name="ItemHelp" MaxWidth="320" Margin="0" Padding="0"/>
+                                </Flyout>
+                            </Button.Flyout>
+                        </Button>
+                        <Button x:Name="ItemButton1" Style="{StaticResource ItemButtonStyle}"  Click="ItemButton_Click" />
+                        <Button x:Name="ItemButton2" Style="{StaticResource ItemButtonStyle}"  Click="ItemButton_Click" />
+                        <Button x:Name="ItemButton3" Style="{StaticResource ItemButtonStyle}"  Click="ItemButton_Click" />
+                        <Button x:Name="MenuButton"  x:Uid="MenuButton"  Style="{StaticResource ItemButtonStyle}" >
+                            <Button.Flyout>
+                                <MenuFlyout Opening="MenuFlyout_Opening">
+                                    <MenuFlyoutItem x:Name="MenuItem1" Click="MenuItem_Click" />
+                                    <MenuFlyoutItem x:Name="MenuItem2" Click="MenuItem_Click" />
+                                    <MenuFlyoutItem x:Name="MenuItem3" Click="MenuItem_Click" />
+                                    <MenuFlyoutItem x:Name="MenuItem4" Click="MenuItem_Click" />
+                                    <MenuFlyoutItem x:Name="MenuItem5" Click="MenuItem_Click" />
+                                    <MenuFlyoutItem x:Name="MenuItem6" Click="MenuItem_Click" />
+                                </MenuFlyout>
+                            </Button.Flyout>
+                            <FontIcon  FontFamily="Segoe UI" Glyph="&#x22EF;" FontSize="20" />
+                        </Button>
+                        <!--<Button x:Name="TailButton" Width="2" Margin="10,0,0,0"  Height="{StaticResource ElementHieght}" KeyDown="TailButton_KeyDown" KeyUp="TailButton_KeyUp" LostFocus="TailButton_LostFocus"/>-->
+                    </StackPanel>
+                </Grid>
+            </Canvas>
+
+        </Grid>
+    </Grid>
+</Page>
